<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/host"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/host"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/port"
        android:layout_below="@+id/host"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"/>
    <Button
        android:id="@+id/disconnect"
        android:layout_below="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/break1"
        android:layout_below="@+id/disconnect"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/newTopic"
        android:layout_below="@id/break1"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:hint="@string/pubTopic"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newTopicData"
        android:layout_below="@+id/newTopic"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/data"
        android:maxLines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/publish"
        android:layout_below="@id/break1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/break2"
        android:layout_below="@+id/newTopicData"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/subscribeTopic"
        android:layout_below="@id/break2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/qos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/subTopic"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/qos"
        android:layout_below="@id/break2"
        android:layout_toStartOf="@id/unsubscribe"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/qos"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subscribe"
        android:layout_below="@id/break2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/subscribe"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/unsubscribe"
        android:layout_below="@id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/unsubscribe"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"/>

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/unsubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="5dp"
        android:stackFromBottom="true"/>

</RelativeLayout>